syntax = "proto3";
package dCSP;

message Int32 { int32 value = 1; }
message Int64 { int64 value = 1; }
message Uint32 { uint32 value = 1; }
message Uint64 { uint64 value = 1; }
message Float32 { float value = 1; }
message Float64 { double value = 1; }
message String { String value = 1; }
message Bytes { bytes value = 1; } // []byte
message Bool { bool value = 1; }
message Signal { bool value = 1; } // struct{}